--- a/projects.html
+++ b/projects.html
@@ -621,7 +621,7 @@
         </div>
 
         <div class="project">
-          <img src="assets/images/Amazon.png" alt="Amazon-clone" height="40%" />
+          <img src="assets/images/amazon.png" alt="Amazon-clone" height="40%" />
           <div class="project-info">
             <div class="protext">
               <h3>Amazon Clone</h3>
