--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
                 <p class="image-caption">Kathakali</p>
               </div>
               <div class="image-item">
-                <img src="assets/images/odissi.jpg" alt="Odissi" />
+                <img src="assets/images/Odissi.jpg" alt="Odissi" />
                 <p class="image-caption">Odissi</p>
               </div>
               <div class="image-item">
