--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
 
             <div class="skill-card">
               <div class="skill-image">
-                <img src="assets/icons/css.svg" alt="CSS" />
+                <img src="assets/icons/CSS.svg" alt="CSS" />
               </div>
               <div class="skill-content">
                 <h3>CSS</h3>
