--- a/contact.html
+++ b/contact.html
@@ -27,37 +27,48 @@
     </header>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
-      <h2>Contact Me</h2>
-      <p>Feel free to reach out for collaborations or any inquiries.</p>
+    <section id="contact-container">
+      <div class="contact-left">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out for collaborations or any inquiries.</p>
 
-      <form id="contactForm">
-        <input type="text" id="name" placeholder="Your Name" required />
-        <input type="email" id="email" placeholder="Your Email" required />
-        <input type="text" id="subject" placeholder="Subject" required />
-        <textarea id="message" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
+        <form id="contactForm">
+          <input type="text" id="name" placeholder="Your Name" required />
+          <input type="email" id="email" placeholder="Your Email" required />
+          <input type="text" id="subject" placeholder="Subject" required />
+          <textarea id="message" placeholder="Your Message" required></textarea>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
 
-      <p id="responseMessage"></p>
+        <p id="responseMessage"></p>
 
-      <!-- Social Media Links -->
-      <div class="social-icons">
-        <a href="mailto:vejandlachakrish2005@gmail.com" class="icon"
-          >📧 Email</a
-        >
-        <a
-          href="https://www.linkedin.com/in/vejandla-chakrish-953058321/"
-          target="_blank"
-          class="icon"
-          >🔗 LinkedIn</a
-        >
-        <a
-          href="https://github.com/Vejandlachakrish"
-          target="_blank"
-          class="icon"
-          >💻 GitHub</a
-        >
+        <!-- Social Media Links -->
+        <div class="social-icons">
+          <a href="mailto:vejandlachakrish2005@gmail.com" class="icon"
+            >📧 Email</a
+          >
+          <a
+            href="https://www.linkedin.com/in/vejandla-chakrish-953058321/"
+            target="_blank"
+            class="icon"
+            >🔗 LinkedIn</a
+          >
+          <a
+            href="https://github.com/Vejandlachakrish"
+            target="_blank"
+            class="icon"
+            >💻 GitHub</a
+          >
+        </div>
+      </div>
+
+      <!-- Right Image Section -->
+      <div class="contact-right">
+        <img
+          src="assets/images/me4.png"
+          alt="Profile Image"
+          class="contact-image"
+        />
       </div>
     </section>
   </body>
