--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
           that make a difference.
         </p>
 
-        <a href="docs/ChakrishVejandla.pdf" class="btn" download
+        <a href="Chakrish_Vejandla_Resume.pdf" class="btn" download
           >📄 Download Resume</a
         >
       </div>
